fixed -  Frontpage content jumps on load event

--- a/css/custom.css
+++ b/css/custom.css
@@ -22,6 +22,10 @@
 
 .frontpageCarousel{
   max-height:494px;
+  opacity:0;
+}
+.frontpageCarousel.slick-initialized{
+	opacity:1;
 }
 
 .frontpageCarousel img {
